QSvgGenerator: fix support for Texture brushes

Prior to Qt 5.9, the QSvgGenerator paint engine did not claim support
for patterned brushes, so QPainter would emulate it. (In practice, by
painting everything into a big image and dumping that to the generated
svg). Then 914e25bf01e6264dd80b6f27e50b45a578a7fe89 disabled that
emulation as part of implementng support for the standard pattern
brushes. However, as a side effect, that also disabled the emulation
of Texture brushes, which is controlled by the same paint engine
feature flag. Such brushes would hence not be rendered at all.

This commit fixes that by extending the pattern brush support to also
cover texture brushes.

As a driveby, some needlessly complex QString constructions have been
simplified.

Fixes: QTBUG-88265
Change-Id: I3b3560c9bed29060c23b2fdb8da7665f05ed5737
Reviewed-by: Hatem ElKharashy <hatem.elkharashy@qt.io>
(cherry picked from commit 1e820e62dda674735cb114c845858ffffe40d6d2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>